remove all styles and canvas

--- a/2013/agenda/_day1.html.haml
+++ b/2013/agenda/_day1.html.haml
@@ -1,6 +1,6 @@
 #day1
 .objgroup
-  .obj-scanner.obj{ :"data-type" => "Scanner"}
+  / .obj-scanner.obj{ :"data-type" => "Scanner"}
 %h2.title Agenda
 .date-block
   %p
