--- a/2013/agenda/_day2.html.haml
+++ b/2013/agenda/_day2.html.haml
@@ -1,7 +1,7 @@
 #day2
 .objgroup
-  .obj-scanner.obj{ :"data-type" => "Scanner"}
-  .obj-scanner.obj{ :"data-type" => "Scanner"}
+  / .obj-scanner.obj{ :"data-type" => "Scanner"}
+  / .obj-scanner.obj{ :"data-type" => "Scanner"}
 .date-block
   %p 7/20 議程第二天
 .agenda-table
