--- a/2013/location/index.html.haml
+++ b/2013/location/index.html.haml
@@ -3,12 +3,12 @@
 
 .section.location
   .objgroup
-    .obj-decoder.obj{ :"data-type" => "Decoder"}
-    .obj-decoder.obj{ :"data-type" => "Decoder"}
-    .obj-decoder.obj{ :"data-type" => "Decoder"}
-    .obj-decoder.obj{ :"data-type" => "Decoder"}
-    .obj-decoder.obj{ :"data-type" => "Decoder"}
-  %h2.title 
+    / .obj-decoder.obj{ :"data-type" => "Decoder"}
+    / .obj-decoder.obj{ :"data-type" => "Decoder"}
+    / .obj-decoder.obj{ :"data-type" => "Decoder"}
+    / .obj-decoder.obj{ :"data-type" => "Decoder"}
+    / .obj-decoder.obj{ :"data-type" => "Decoder"}
+  %h2.title
   .content.zh-tw
     .title-wrapper
       %h3.title
@@ -63,13 +63,13 @@
       #### Transportation
 
       ##### By Bus
-      
+
       Bus lines 205, 212, 270, 276, 306, 620, 645 all go to Academia Sinica
-      
+
       ##### By MRT
 
       Take the Nankang-Banqiao-Tucheng line to Nankang Station, and then transfer to Bus 212, 270 or Blue 25 to go to Academia Sinica.
-      
+
       ##### By Train
 
       Transfer to Bus 212, 270 or Blue 25 at Nankang Train Station to go to Academia Sinina
