--- a/2013/registration/index.html.haml
+++ b/2013/registration/index.html.haml
@@ -3,7 +3,7 @@
 
 .section.registration
   .objgroup
-    .obj-pointer.obj{ :"data-type" => "Pointer"}
+    / .obj-pointer.obj{ :"data-type" => "Pointer"}
   %h2.title SOLD OUT / 不要再問了
   .content.zh-tw
     .title-wrapper
@@ -15,12 +15,12 @@
       - 報名時間：2013/05/26 00:00 — 2013/05/31 12:00
       - 一般票新台幣 3,000 元
       - 學生票新台幣 1,500 元
-      
+
       #### 第二階段網路報名
       - 報名時間：2013/06/01 12:00 — 2013/06/23 23:59
       - 一般票新台幣 4,000 元
       - 學生票新台幣 2,000 元
-      
+
       #### 第三階段網路報名
       - 報名時間：2013/07/01 00:00 — 2013/07/06 23:59
       - 一般票新台幣 5,000 元
