--- a/2013/sass/_hero.scss
+++ b/2013/sass/_hero.scss
@@ -2,14 +2,14 @@
   display: none;
   @include at-breakpoint($desktop) {
     display: block;
-    height: 600px;
-    background: image-url("hero.png") no-repeat center top;
+    // height: 600px;
+    // background: image-url("hero.png") no-repeat center top;
     .slogan {
-      display: none;
+      // display: none;
     }
     a {
-      position: absolute;
-      top: 401px;
+      // position: absolute;
+      // top: 401px;
       width: 100%;
       @include transition(.3s);
       &:hover {
@@ -18,12 +18,12 @@
     }
     hgroup {
       .title {
-        background: black;
-        @include replace-text-with-svg("logo-large");
+        // background: black;
+        // @include replace-text-with-svg("logo-large");
         margin: 0 auto;
       }
-      width: 600px - 2px;
-      height: 100px - 1px;
+      // width: 600px - 2px;
+      // height: 100px - 1px;
       overflow: hidden;
       margin: 0 auto;
     }
@@ -37,28 +37,28 @@
   }
   @include at-breakpoint($desktop) {
     display: block;
-    height: 200px - 1px;
+    // height: 200px - 1px;
     padding-top: 51px;
-    background: image-url("hero.png") no-repeat center bottom;
+    // background: image-url("hero.png") no-repeat center bottom;
     .slogan {
       display: none;
     }
     a {
-      @include transition(.3s);
+      // @include transition(.3s);
       &:hover {
-        background: rgba(black,.7);
+        // background: rgba(black,.7);
       }
     }
     hgroup {
       .title {
-        background: black;
-        @include replace-text-with-svg("logo-large");
+        // background: black;
+        // @include replace-text-with-svg("logo-large");
         margin: 0 auto;
       }
-      width: 600px - 2px;
-      height: 100px - 1px;
+      // width: 600px - 2px;
+      // height: 100px - 1px;
       overflow: hidden;
       margin: 0 auto;
     }
-  }  
+  }
 }
