--- a/2013/_footer.html.haml
+++ b/2013/_footer.html.haml
@@ -9,8 +9,8 @@
     %li.menu-item= link_to( "History", "http://hitcon.org/archive.htm" )
     %li.menu-item= link_to( "Album", "http://photo.hitcon.org" )
     %li.menu-item= link_to( "Facebook", "http://fb.com/hitcon" )
-    
-  .slogan
+
+  / .slogan
   %ul.credit
     %li= link_to "CHROOT Security Group", "http://www.chroot.org/"
     %li= link_to "Designed by evendesign", "http://evendesign.tw"
