--- a/2013/index.html.haml
+++ b/2013/index.html.haml
@@ -7,12 +7,12 @@
 
 .row.description
   .section
-    
+
 
 .row.topic
   .section
 
-    .obj-pointer.obj{ :"data-type" => "Pointer"}
+    / .obj-pointer.obj{ :"data-type" => "Pointer"}
     / .obj-decoder.obj{ :"data-type" => "Decoder"}
     / .obj-scanner.obj{ :"data-type" => "Scanner"}
 
@@ -26,9 +26,9 @@
       %p Here we can only trust ourselves<span>,</span><br> relying on hackers.
       %p Ultimately<span>,</span><br> we believe it is the hacking skills which will protects us.
       %p Cyberwar : In hack we trust.
-      .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
+      / .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
     %hr
-    .obj-pointer.obj{ :"data-type" => "Pointer"}
+    / .obj-pointer.obj{ :"data-type" => "Pointer"}
     %h2.date 2013/7/19(五) – 2013/7/20(六)
     %p.stage 中央研究院 人文社會科學館 國際會議廳
     %p.address 台北市南港區研究院路二段128號
@@ -52,9 +52,9 @@
 .row.whats-hitcon
   .section
     .objgroup
-      .obj-decoder.obj{ :"data-type" => "Decoder"}
-      .obj-decoder.obj{ :"data-type" => "Decoder"}
-      .obj-decoder.obj{ :"data-type" => "Decoder"}
+      / .obj-decoder.obj{ :"data-type" => "Decoder"}
+      / .obj-decoder.obj{ :"data-type" => "Decoder"}
+      / .obj-decoder.obj{ :"data-type" => "Decoder"}
     %h2.title What's HITCON
     .content.en
       %p In the field of pure technology, there is no evil and justice. We believe hacker represents an always challenging spirit with tremendous knowledge and skills.
@@ -64,9 +64,9 @@
       %p HITCON is the hacker’s party. We invite everyone to come to Taiwan, join the party. You can experience Taiwan hacker’s culture, see most interesting and sensitive topics, and communicate with hackers as well as hacker groups.
 
     .objgroup
-      .obj-decoder.obj{ :"data-type" => "Decoder"}
-      .obj-decoder.obj{ :"data-type" => "Decoder"}
-      .obj-decoder.obj{ :"data-type" => "Decoder"}
+      / .obj-decoder.obj{ :"data-type" => "Decoder"}
+      / .obj-decoder.obj{ :"data-type" => "Decoder"}
+      / .obj-decoder.obj{ :"data-type" => "Decoder"}
     %h2.title HITCON 是三小
     .content.zh-tw
       %p Hacks In Taiwan Conference 台灣駭客年會 (HITCON) 是台灣最大的駭客與資安技術研討會。
