--- a/2013/sass/_agenda.scss
+++ b/2013/sass/_agenda.scss
@@ -23,9 +23,9 @@
   }
   .title {
     @include adjust-font-size-to(24px,1.25);
-    @include trailing-border(3px);
-    border-bottom-style: double;
-    border-bottom-color: $blue;
+    // @include trailing-border(3px);
+    // border-bottom-style: double;
+    // border-bottom-color: $blue;
     @include trailer(.5);
   }
   .speaker {
@@ -39,36 +39,36 @@
   .company {
     text-align: center;
     @include adjust-font-size-to(13px);
-    @include trailing-border(1px, .5);
-    border-color: $blue;
+    // @include trailing-border(1px, .5);
+    // border-color: $blue;
     @include trailer(1);
   }
   .download {
     text-align: center;
     a {
-      @include link-colors($red);
+      // @include link-colors($red);
     }
-    @include trailing-border(1px, .5);
-    border-color: $blue;
+    // @include trailing-border(1px, .5);
+    // border-color: $blue;
     @include trailer(1);
     margin-top: - $base-line-height / 2;
   }
   .speaker-note {
     @include pie-clearfix;
     @include adjust-font-size-to(13px, 2/3);
-    @include trailing-border(1px, .5);
-    border-color: $blue;
+    // @include trailing-border(1px, .5);
+    // border-color: $blue;
     @include trailer(1);
     .zh:before {
       content: "講者簡介";
       display: block;
-      color: $yellow;
+      // color: $yellow;
       @include trailer(1);
     }
     .en:before {
       content: "Speaker";
       display: block;
-      color: $yellow;
+      // color: $yellow;
       @include trailer(1);
     }
   }
@@ -78,13 +78,13 @@
     .zh:before {
       content: "議程簡介";
       display: block;
-      color: $yellow;
+      // color: $yellow;
       @include trailer(1);
     }
     .en:before {
       content: "Session";
       display: block;
-      color: $yellow;
+      // color: $yellow;
       @include trailer(1);
     }
   }
@@ -100,7 +100,7 @@
     @include trailer(1);
   }
   h3, h4 {
-    color: $green;
+    // color: $green;
     @include adjust-font-size-to(13px);
   }
   ul, ol {
@@ -117,13 +117,13 @@
   @include adjust-font-size-to(12px, .7);
   display: inline-block;
   padding: 1px .7em 0;
-  background: $blue;
+  // background: $blue;
   font-weight: bold;
   letter-spacing: 1px;
   text-shadow: 0 1px 0 rgba(black,.3);
-  &.r0 { background: $red; }
-  &.r1 { background: $dark-yellow; }
-  &.r2 { background: $green; }
+  // &.r0 { background: $red; }
+  // &.r1 { background: $dark-yellow; }
+  // &.r2 { background: $green; }
 }
 
 .agenda-table {
@@ -147,8 +147,8 @@
         position: absolute;
         top: 0;
         left: 0;
-        animation: time-light 1.5s infinite alternate;
-        -webkit-animation: time-light 1.5s infinite alternate;
+        // animation: time-light 1.5s infinite alternate;
+        // -webkit-animation: time-light 1.5s infinite alternate;
       }
     }
   }
@@ -164,9 +164,9 @@
 .date-block p {
   @include reset-box-model;
   @include adjust-font-size-to(24px,1);
-  @include trailing-border(1px);
+  // @include trailing-border(1px);
   @include trailer(1);
-  border-color: $red;
+  // border-color: $red;
   text-align: center;
   small {
     font-size: 12px;
@@ -174,7 +174,7 @@
 }
 .time-block {
   @include adjust-font-size-to(12px);
-  background: $blue;
+  // background: $blue;
   padding: 0 .5em;
   letter-spacing: 2px;
   font-weight: bold;
@@ -186,12 +186,12 @@
   @include padding-trailer(2/3);
   @include adjust-font-size-to(12px, 2/3);
   &+& {
-    @include leading-border(1px, 2/3);
-    border-color: $blue;
+    // @include leading-border(1px, 2/3);
+    // border-color: $blue;
   }
   @include at-breakpoint($desktop) {
     &+& {
-      border-top: 0;
+      // border-top: 0;
     }
     &[class*="room-r"] {
       @include span-columns(4);
@@ -215,7 +215,7 @@
     @include leader(1/4);
     @include adjust-font-size-to(16px, 3/4);
     font-weight: bold;
-    background: $dark-blue;
+    // background: $dark-blue;
     @include trailer(1/4);
   }
   .speaker {
@@ -230,22 +230,22 @@
     @include adjust-font-size-to(12px, .7);
     display: inline-block;
     padding: 1px .7em 0;
-    background: $blue;
+    // background: $blue;
     font-weight: bold;
     letter-spacing: 1px;
     text-shadow: 0 1px 0 rgba(black,.3);
   }
   &.room-r0:before {
     content: "R0";
-    background: $red;
+    // background: $red;
   }
   &.room-r1:before {
     content: "R1";
-    background: $dark-yellow;
+    // background: $dark-yellow;
   }
   &.room-r2:before {
     content: "R2";
-    background: $green;
+    // background: $green;
   }
   &.room-rest {
     float: none;
@@ -253,10 +253,10 @@
     @include reset-columns;
     @include padding-leader(1/3);
     @include padding-trailer(1/3);
-    background: darken($blue, 13%);
+    // background: darken($blue, 13%);
     .title {
-      text-shadow: 0 0 10px $white;
-      background: transparent;
+      // text-shadow: 0 0 10px $white;
+      // background: transparent;
       text-align: center;
       @include at-breakpoint($desktop) {
         display: inline-block;
