--- a/2013/sass/_block-item.scss
+++ b/2013/sass/_block-item.scss
@@ -18,7 +18,7 @@
     }
   }
   p {
-    color: #999;
+    // color: #999;
     display: inline;
     @include at-breakpoint($ipad) {
       display: block;
@@ -37,21 +37,21 @@
   position: relative;
   height: 0;
   overflow: hidden;
-  @include link-colors(white, white);
-  background-color: rgba(black,.03);
+  // @include link-colors(white, white);
+  // background-color: rgba(black,.03);
   opacity: .9;
   // &:hover {
   //   opacity: 1;
   // }
   .section & {
-    @include link-colors(black);
+    // @include link-colors(black);
   }
   @include at-breakpoint($ipad) {
     border-radius: 5px;
   }
 }
 .block-image {
-  background-color: white;
+  // background-color: white;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -67,7 +67,7 @@
   @include box-sizing(border-box);
   padding: 1em .5em .3em;
   -webkit-font-smoothing: subpixel-antialiased;
-  @include background( linear-gradient(rgba(white, .01), rgba(white, .7) 50% ) );
+  // @include background( linear-gradient(rgba(white, .01), rgba(white, .7) 50% ) );
   @include at-breakpoint($ipad) {
     padding: 1em;
   }
@@ -80,9 +80,9 @@
   clear: both;
   @include pie-clearfix;
   padding-top: 60%;
-  background-repeat: no-repeat;
-  background-position: center center;
-  @include background-size(contain);
+  // background-repeat: no-repeat;
+  // background-position: center center;
+  // @include background-size(contain);
   position: relative;
 }
 
@@ -91,50 +91,50 @@
   position: absolute;
   top: 0;
   left: 0;
-  background: $badge;
+  // background: $badge;
   z-index: 99;
   padding: 0 10px;
-  color: darken(white, 10%);
+  // color: darken(white, 10%);
   font-weight: bold;
   font-size: 15px;
   line-height: 24px;
-  text-shadow: 0 -1px 0 rgba(black,.5);
-  &:before {
-    position: absolute;
-    top: 0;
-    left: 100%;
-    display: block;
-    content: "";
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    border-width: 12px 12px 0 0;
-    border-color: $badge transparent transparent transparent;
-  }
-  &:after {
-    position: absolute;
-    bottom: 0;
-    left: 100%;
-    display: block;
-    content: "";
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    border-width: 12px 0 0 12px;
-    border-color: transparent transparent transparent $badge;
-  }
+  // text-shadow: 0 -1px 0 rgba(black,.5);
+  // &:before {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 100%;
+  //   display: block;
+  //   content: "";
+  //   width: 0px;
+  //   height: 0px;
+  //   border-style: solid;
+  //   border-width: 12px 12px 0 0;
+  //   border-color: $badge transparent transparent transparent;
+  // }
+  // &:after {
+  //   position: absolute;
+  //   bottom: 0;
+  //   left: 100%;
+  //   display: block;
+  //   content: "";
+  //   width: 0px;
+  //   height: 0px;
+  //   border-style: solid;
+  //   border-width: 12px 0 0 12px;
+  //   border-color: transparent transparent transparent $badge;
+  // }
   em {
     font-style: normal;
-    color: white;
-    text-shadow: 0 0 3px $yellow;
+    // color: white;
+    // text-shadow: 0 0 3px $yellow;
   }
   @include at-breakpoint($ipad) {
     top: 1em;
     left: -7px;
     padding-left: 17px;
-    $drop-shadow: drop-shadow(7px 3px 1px rgba($blue,.3));
-    -webkit-filter: $drop-shadow;
-    filter: $drop-shadow;
+    // $drop-shadow: drop-shadow(7px 3px 1px rgba($blue,.3));
+    // -webkit-filter: $drop-shadow;
+    // filter: $drop-shadow;
 
   }
 }
@@ -194,5 +194,5 @@
 @include at-breakpoint($desktop) {
   .big-block {
     padding-top: 40%;
-  }  
+  }
 }
