--- a/2013/sass/_footer.scss
+++ b/2013/sass/_footer.scss
@@ -3,7 +3,7 @@
   @include leader(1);
   text-align: center;
   @include leading-border(1px);
-  border-color: $blue;
+  // border-color: $blue;
   ul {
     list-style: none;
   }
@@ -16,19 +16,19 @@
     @include columns(10em 3);
     @include column-gap(25px);
     a {
-      @include link-colors( darken($red, 10%) );
+      // @include link-colors( darken($red, 10%) );
       @include adjust-font-size-to(16px);
     }
   }
   .credit {
     a {
-      @include link-colors( darken($yellow, 30%) );
+      // @include link-colors( darken($yellow, 30%) );
       @include adjust-font-size-to(13px);
     }
   }
   .slogan {
     margin: $base-line-height auto;
-    @include replace-text-with-svg("slogan");
+    // @include replace-text-with-svg("slogan");
     @include at-breakpoint($ipad) {
       width: 600px;
       height: 50px;
