--- a/2013/sass/_header.scss
+++ b/2013/sass/_header.scss
@@ -1,23 +1,23 @@
 .header {
   position: relative;
   @include trailer(2);
-  background: rgba(black,.5);
+  // background: rgba(black,.5);
   .title {
     @include adjust-font-size-to(24px, 2);
     text-align: center;
     // background: rgba($dark-blue, .3);
-    border-bottom: 1px solid $green;
+    // border-bottom: 1px solid $green;
     height: $base-line-height * 2 - 1px;
     overflow: hidden;
     a {
       display: block;
-      @include link-colors($red);
-      @include replace-text-with-svg("logo-small");
+      // @include link-colors($red);
+      // @include replace-text-with-svg("logo-small");
       margin: 0 auto;
     }
   }
   .menu-button {
-    @include transition(background-color .3s .5s);
+    // @include transition(background-color .3s .5s);
     cursor: pointer;
     display: block;
     position: absolute;
@@ -30,7 +30,8 @@
       margin: auto;
       width: 70%;
       height: 1px;
-      background: $white;
+      // background: $white;
+      background: black;
       margin-bottom: 8px;
       &:first-child {
         margin-top: 15px;
@@ -46,7 +47,7 @@
 }
 
 .show-menu .header .menu-button {
-  background-color: $red;
+  // background-color: $red;
   .line {
     @include reset-box-model;
     &:first-child {
