--- a/2013/sass/_typography.scss
+++ b/2013/sass/_typography.scss
@@ -18,7 +18,7 @@ body {
 }
 
 a {
-  @include link-colors($white, $green);
+  // @include link-colors($white, $green);
   @include hover-link;
 }
 
@@ -56,10 +56,10 @@ hr {
     text-align: left;
     font-weight: bold;
     margin: 0;
-    color: $yellow;
+    // color: $yellow;
   }
   h5 {
-    color: $green;
+    // color: $green;
   }
   p {
     @include trailer(1);
@@ -69,7 +69,7 @@ hr {
     @include trailer(1);
   }
   a {
-    @include link-colors($yellow);
+    // @include link-colors($yellow);
   }
 }
 
