--- a/2013/wargame/index.html.haml
+++ b/2013/wargame/index.html.haml
@@ -2,19 +2,19 @@
   = render "/2013/hero-page"
 
 .section.wargame
-  .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
-  .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
-  .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
-  .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
-  .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
-  .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
-  .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
-  .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
-  .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
-  .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
+  / .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
+  / .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
+  / .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
+  / .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
+  / .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
+  / .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
+  / .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
+  / .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
+  / .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
+  / .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
   %br
   %h2.title Wargame
-  
+
   .content.zh-tw
     .title-wrapper
       %h3.title
@@ -23,7 +23,7 @@
 
       Wargame 競賽一直是台灣駭客年會的重點項目。從第一屆以來，每屆白熱化的戰爭都聚集了不少資安的人才前來一較高下。在 2011 年開始，甚至有國外的駭客好手前來挑戰。資安駭客技術在國內一直是隱晦的技術，因為法律限制以及國情不同，無法像國外一樣光明正大的進行交流。因此，台灣駭客年會設立了 Wargame 競賽，提供一個正當且合法的環境讓大家來挑戰切磋。希望台灣能夠聚集這些資安能量，好好為我們台灣的安全奮鬥！
 
-      你想成為駭客嗎？你想展現你的實力嗎？你想跟真正的駭客交手嗎？  
+      你想成為駭客嗎？你想展現你的實力嗎？你想跟真正的駭客交手嗎？
       歡迎來挑戰！
 
       #### 時間地點
@@ -70,9 +70,9 @@
       會議期間，可隨時連線至 Wargame 主機註冊報名參賽。
       競賽時間終了，進行頒獎。
       競賽過程中隨時注意現場及 IRC 的競賽公告
-      
+
       ##### 判定優勝
-      
+
       每一關卡都有不同的積分，時間終了時，以積分高低判定優勝，同分時以時間先後順序判定優勝。
       優勝獎金之給予，依總獎金額按照積分分數比例分配。
 
