--- a/2013/_hero-page.html.haml
+++ b/2013/_hero-page.html.haml
@@ -1,5 +1,5 @@
 .hero-page
   %a{ :href => "/2013/" }
     %hgroup
-      %h1.title HITCON 2013
-      %h2.slogan Cyberwar : In hack we trust
+      %h1.title 2014 台灣資料科學愛好者年會
+      %h2.slogan Exploring the Potentials and Risks of Real-World Data Analytics
