--- a/2013/registration/index.html.haml
+++ b/2013/registration/index.html.haml
@@ -4,30 +4,32 @@
 .section.registration
   .objgroup
     / .obj-pointer.obj{ :"data-type" => "Pointer"}
-  %h2.title SOLD OUT / 不要再問了
+  / %h2.title SOLD OUT / 不要再問了
   .content.zh-tw
     .title-wrapper
       %h3.title
         .span 報名方式
     %a.btn{ :href => "http://reg.hitcon.org/2013/" } 報名
     :markdown
-      #### 第一階段網路報名
-      - 報名時間：2013/05/26 00:00 — 2013/05/31 12:00
-      - 一般票新台幣 3,000 元
-      - 學生票新台幣 1,500 元
+      #### 早鳥優惠
+      - 報名時間：2014/06/16 (Mon) -- 2014/07/18 (Fri)
+      - 早鳥票新台幣 1,200 元
+      - 學生票新台幣 300 元
 
-      #### 第二階段網路報名
-      - 報名時間：2013/06/01 12:00 — 2013/06/23 23:59
-      - 一般票新台幣 4,000 元
-      - 學生票新台幣 2,000 元
+      #### 一般票價
+      - 報名時間：2014/07/19 (Sat) -- 2014/08/15 (Fri)
+      - 一般票新台幣 1,500 元
+      - 學生票新台幣 500 元
 
-      #### 第三階段網路報名
-      - 報名時間：2013/07/01 00:00 — 2013/07/06 23:59
-      - 一般票新台幣 5,000 元
+      #### 現場票價
+      - 報名時間：2014/08/30 (Sat) -- 2014/08/31 (Sun)
+      - 一般票新台幣 1,800 元
+      - 學生票新台幣 600 元
+      - 單日票新台幣 1,000 元
 
       #### 現場報名
 
-      - 會議舉行當日可至現場報名新台幣 6,000 元。
+      - 會議舉行當日可至現場報名新台幣 1,800 元。
       - 現場報名是網路售票有剩才開放，且數量可能非常少或無人數，額滿為止，額滿後恕不開放入場。
 
       #### 報名注意事項
@@ -56,50 +58,50 @@
       - 與會兩天中提供豐盛午餐及精緻下午茶點。
 
   .content.en
-    .title-wrapper
-      %h3.title
-        .span Registration
-    %a.btn{ :href => "http://reg.hitcon.org/2013/" } Register
-    :markdown
-      #### Early Online Registration:
-      - Period: 2013/05/26 00:00 ~ 2013/05/31 12:00
-      - Full Price: NTD$3,000
-      - Student Price: NTD$1,500
+    -# .title-wrapper
+    -#   %h3.title
+    -#     .span Registration
+    -# %a.btn{ :href => "http://reg.hitcon.org/2013/" } Register
+    -# :markdown
+    -#   #### Early Online Registration:
+    -#   - Period: 2013/05/26 00:00 ~ 2013/05/31 12:00
+    -#   - Full Price: NTD$3,000
+    -#   - Student Price: NTD$1,500
 
-      #### Regular Online Registration:
+    -#   #### Regular Online Registration:
 
-      - Period: 2013/06/01 12:00 ~ 2013/06/23 23:59
-      - Full Price: NTD$4,000
-      - Student Price: NTD$2,000
+    -#   - Period: 2013/06/01 12:00 ~ 2013/06/23 23:59
+    -#   - Full Price: NTD$4,000
+    -#   - Student Price: NTD$2,000
 
-      #### Late Online Registration:
+    -#   #### Late Online Registration:
 
-      - Period: 2013/07/01 00:00 ~ 2013/07/06 23:59
-      - Full Price: NTD$5,000
+    -#   - Period: 2013/07/01 00:00 ~ 2013/07/06 23:59
+    -#   - Full Price: NTD$5,000
 
-      #### On-site Registration:
+    -#   #### On-site Registration:
 
-      - Irregardless of student status, on-site registration will cost NTD$6,000
-      - On-site registration will only be open when there are leftover seats from the previous stages of registration, therefore, there may be little or no seats available for on-site registration.
-      - There will be no additional seats for on-site registration once all the available ones are sold out.
+    -#   - Irregardless of student status, on-site registration will cost NTD$6,000
+    -#   - On-site registration will only be open when there are leftover seats from the previous stages of registration, therefore, there may be little or no seats available for on-site registration.
+    -#   - There will be no additional seats for on-site registration once all the available ones are sold out.
 
-      #### Notes on Registration:
+    -#   #### Notes on Registration:
 
-      - For oversea participants who are unable to wire-transfer the registration fees, please email us at service@hitcon.org with the list of participants, and we'll assist you.
-      - All fees are not refundable
-      - Be sure to fill in legitimate and accurate information during online registration, and bring along any photo identification on the conference day in case the need for it arises.
+    -#   - For oversea participants who are unable to wire-transfer the registration fees, please email us at service@hitcon.org with the list of participants, and we'll assist you.
+    -#   - All fees are not refundable
+    -#   - Be sure to fill in legitimate and accurate information during online registration, and bring along any photo identification on the conference day in case the need for it arises.
 
-      #### Notes on Student Status:
+    -#   #### Notes on Student Status:
 
-      - To be eligible for the student status, one must meet either of the criteria:
-        - Holders of a valid undergraduate student ID ( graduate students are ineligible ) for the past academic year and under the age of 24.
-        - Those who are born after Sep 1994, and can prove it with an identity card, passport, driver license or any other valid photo identification with birth date.
-      - Those with the student status will need to present either their student ID, or any photo identification with birth date at the on-site check-in.
-      - For those who are not eligible for student status or is unable to present their supporting documentation, they'll need to pay the difference between the full price and student price.
+    -#   - To be eligible for the student status, one must meet either of the criteria:
+    -#     - Holders of a valid undergraduate student ID ( graduate students are ineligible ) for the past academic year and under the age of 24.
+    -#     - Those who are born after Sep 1994, and can prove it with an identity card, passport, driver license or any other valid photo identification with birth date.
+    -#   - Those with the student status will need to present either their student ID, or any photo identification with birth date at the on-site check-in.
+    -#   - For those who are not eligible for student status or is unable to present their supporting documentation, they'll need to pay the difference between the full price and student price.
 
-      #### Notes for Participants:
+    -#   #### Notes for Participants:
 
-      - After successful registration, be sure to read the confirmation email, the QRCode in it will be used to verify your identity upon check-in.
-      - The lodging and transportation to and from the conference venue will be at the participants' own expense
-      - Lunch and desserts will be provided during the two conference day.
+    -#   - After successful registration, be sure to read the confirmation email, the QRCode in it will be used to verify your identity upon check-in.
+    -#   - The lodging and transportation to and from the conference venue will be at the participants' own expense
+    -#   - Lunch and desserts will be provided during the two conference day.
 
