--- a/2013/_footer.html.haml
+++ b/2013/_footer.html.haml
@@ -6,12 +6,12 @@
     %li.menu-item= link_to( "Location", "/2013/location/" )
     %li.menu-item= link_to( "Registration", "/2013/registration/" )
     %li.menu-item= link_to( "Sponsor", "/2013/sponsor/" )
-    %li.menu-item= link_to( "History", "http://hitcon.org/archive.htm" )
-    %li.menu-item= link_to( "Album", "http://photo.hitcon.org" )
-    %li.menu-item= link_to( "Facebook", "http://fb.com/hitcon" )
+    -# %li.menu-item= link_to( "History", "http://hitcon.org/archive.htm" )
+    -# %li.menu-item= link_to( "Album", "http://photo.hitcon.org" )
+    -# %li.menu-item= link_to( "Facebook", "http://fb.com/hitcon" )
 
   / .slogan
   %ul.credit
-    %li= link_to "CHROOT Security Group", "http://www.chroot.org/"
+    %li= link_to "台灣資料科學愛好者協會", "#"
     %li= link_to "Designed by evendesign", "http://evendesign.tw"
 
