--- a/2013/index.html.haml
+++ b/2013/index.html.haml
@@ -2,8 +2,8 @@
   .hero
     %a{ :href => "/2013/" }
       %hgroup
-        %h1.title HITCON 2013
-        %h2.slogan Cyberwar : In hack we trust
+        %h1.title 2014 台灣資料科學愛好者年會
+        %h2.slogan Exploring the Potentials and Risks of Real-World Data Analytics
 
 .row.description
   .section
@@ -16,18 +16,18 @@
     / .obj-decoder.obj{ :"data-type" => "Decoder"}
     / .obj-scanner.obj{ :"data-type" => "Scanner"}
 
-    %h2.date.en 2013/7/19(Fri)—2013/7/20(Sat)
-    %p.stage.en Academia Sinica Humanities &amp; Social Sciences Building
-    %p.address.en No.128, Sec. 2, Academia Rd., Nangang Dist., Taipei City 115, Taiwan
-    %h2.title This Year
-    .content
-      %p In the information world<span>,</span><br> warfare consists of no tank or missiles<span>,</span><br> but only cyber attacks.
-      %p Campaigns happening everyday silently<span>,</span><br> without any government or media telling them.
-      %p Here we can only trust ourselves<span>,</span><br> relying on hackers.
-      %p Ultimately<span>,</span><br> we believe it is the hacking skills which will protects us.
-      %p Cyberwar : In hack we trust.
-      / .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
-    %hr
+    -# %h2.date.en 2013/7/19(Fri)—2013/7/20(Sat)
+    -# %p.stage.en Academia Sinica Humanities &amp; Social Sciences Building
+    -# %p.address.en No.128, Sec. 2, Academia Rd., Nangang Dist., Taipei City 115, Taiwan
+    -# %h2.title This Year
+    -# .content
+    -#   %p In the information world<span>,</span><br> warfare consists of no tank or missiles<span>,</span><br> but only cyber attacks.
+    -#   %p Campaigns happening everyday silently<span>,</span><br> without any government or media telling them.
+    -#   %p Here we can only trust ourselves<span>,</span><br> relying on hackers.
+    -#   %p Ultimately<span>,</span><br> we believe it is the hacking skills which will protects us.
+    -#   %p Cyberwar : In hack we trust.
+    -#   / .obj-password-cracker.obj{ :"data-type" => "PasswordCracker"}
+    -# %hr
     / .obj-pointer.obj{ :"data-type" => "Pointer"}
     %h2.date 2013/7/19(五) – 2013/7/20(六)
     %p.stage 中央研究院 人文社會科學館 國際會議廳
@@ -51,17 +51,17 @@
 
 .row.whats-hitcon
   .section
-    .objgroup
-      / .obj-decoder.obj{ :"data-type" => "Decoder"}
-      / .obj-decoder.obj{ :"data-type" => "Decoder"}
-      / .obj-decoder.obj{ :"data-type" => "Decoder"}
-    %h2.title What's HITCON
-    .content.en
-      %p In the field of pure technology, there is no evil and justice. We believe hacker represents an always challenging spirit with tremendous knowledge and skills.
-      %p Hacks in Taiwan (HITCON) is a highly technical security conference in Taiwan. We know there are a lot of information security researchers with very professional expertise and experience in Taiwan. Before Hacks in Taiwan, there’s no chance to gather them. So CHROOT had the idea to hold an annual conference for all people who are interested in security and hacking. We provide a stage for all hackers to share their newest and exciting findings, to talk without worries, to exchange experience face to face.
-      %p We are very careful in the quality of speeches. We hope presentations could be researches of latest trends or technologies, excellent hacking techniques, fresh and creative ideas, and with less commercial purpose.
-      %p In addition to knowledge sharing, we also hold the wargame event (a.k.a. Capture The Flag) for all attendees. Everyone can attend the game, solve puzzles, and have fun during whole conference. Besides, we have an IRC channel with a very large screen on the stage, wall of sheep, etc. Because of these interesting and unique peculiarities, we can attract a lot of people who are interested in security and hacking to attend the event.
-      %p HITCON is the hacker’s party. We invite everyone to come to Taiwan, join the party. You can experience Taiwan hacker’s culture, see most interesting and sensitive topics, and communicate with hackers as well as hacker groups.
+    -# .objgroup
+    -#   / .obj-decoder.obj{ :"data-type" => "Decoder"}
+    -#   / .obj-decoder.obj{ :"data-type" => "Decoder"}
+    -#   / .obj-decoder.obj{ :"data-type" => "Decoder"}
+    -# %h2.title What's HITCON
+    -# .content.en
+    -#   %p In the field of pure technology, there is no evil and justice. We believe hacker represents an always challenging spirit with tremendous knowledge and skills.
+    -#   %p Hacks in Taiwan (HITCON) is a highly technical security conference in Taiwan. We know there are a lot of information security researchers with very professional expertise and experience in Taiwan. Before Hacks in Taiwan, there’s no chance to gather them. So CHROOT had the idea to hold an annual conference for all people who are interested in security and hacking. We provide a stage for all hackers to share their newest and exciting findings, to talk without worries, to exchange experience face to face.
+    -#   %p We are very careful in the quality of speeches. We hope presentations could be researches of latest trends or technologies, excellent hacking techniques, fresh and creative ideas, and with less commercial purpose.
+    -#   %p In addition to knowledge sharing, we also hold the wargame event (a.k.a. Capture The Flag) for all attendees. Everyone can attend the game, solve puzzles, and have fun during whole conference. Besides, we have an IRC channel with a very large screen on the stage, wall of sheep, etc. Because of these interesting and unique peculiarities, we can attract a lot of people who are interested in security and hacking to attend the event.
+    -#   %p HITCON is the hacker’s party. We invite everyone to come to Taiwan, join the party. You can experience Taiwan hacker’s culture, see most interesting and sensitive topics, and communicate with hackers as well as hacker groups.
 
     .objgroup
       / .obj-decoder.obj{ :"data-type" => "Decoder"}
