--- a/2013/location/index.html.haml
+++ b/2013/location/index.html.haml
@@ -17,11 +17,11 @@
 
       #### 時間
 
-      2013/7/19(五)—2013/7/20(六)
+      2014/8/30 (Sat) -- 2014/8/31 (Sun)
 
       #### 地點
 
-      - 中央研究院 人文社會科學館 國際會議廳
+      - 中研院人社大樓
       - 台北市南港區研究院路二段128號
 
       #### 交通
@@ -46,31 +46,31 @@
 
 
   .content.en
-    .title-wrapper
-      %h3.title
-        .span Location
-    :markdown
+    -# .title-wrapper
+    -#   %h3.title
+    -#     .span Location
+    -# :markdown
 
-      #### Date
+    -#   #### Date
 
-      2013/7/19(Fri)—2013/7/20(Sat)
+    -#   2013/7/19(Fri)—2013/7/20(Sat)
 
-      #### Venue
+    -#   #### Venue
 
-      - Academia Sinica Humanities & Social Sciences Building
-      - No.128, Sec. 2, Academia Rd., Nangang Dist., Taipei City 115, Taiwan
+    -#   - Academia Sinica Humanities & Social Sciences Building
+    -#   - No.128, Sec. 2, Academia Rd., Nangang Dist., Taipei City 115, Taiwan
 
-      #### Transportation
+    -#   #### Transportation
 
-      ##### By Bus
+    -#   ##### By Bus
 
-      Bus lines 205, 212, 270, 276, 306, 620, 645 all go to Academia Sinica
+    -#   Bus lines 205, 212, 270, 276, 306, 620, 645 all go to Academia Sinica
 
-      ##### By MRT
+    -#   ##### By MRT
 
-      Take the Nankang-Banqiao-Tucheng line to Nankang Station, and then transfer to Bus 212, 270 or Blue 25 to go to Academia Sinica.
+    -#   Take the Nankang-Banqiao-Tucheng line to Nankang Station, and then transfer to Bus 212, 270 or Blue 25 to go to Academia Sinica.
 
-      ##### By Train
+    -#   ##### By Train
 
-      Transfer to Bus 212, 270 or Blue 25 at Nankang Train Station to go to Academia Sinina
+    -#   Transfer to Bus 212, 270 or Blue 25 at Nankang Train Station to go to Academia Sinina
 
