移除不必要的資料 ＆ Style 修正

--- a/2013/partials/_fb-og.html.haml
+++ b/2013/partials/_fb-og.html.haml
@@ -6,4 +6,4 @@
 %meta{ :content => "#{data["site-url"]}images/fb.png", :property => "og:image" }
 
 %meta{ :content => data["site-name"],                   :property => "og:site_name" }
-%meta{ :content => data["app-id"],                      :property => "fb:app_id" }
+-# %meta{ :content => data["app-id"],                      :property => "fb:app_id" }
