--- a/2013/stylesheets/cbox.css
+++ b/2013/stylesheets/cbox.css
@@ -1,5 +1,5 @@
 #cboxOverlay {
-    background: #000
+    background: #FFF;
 }
 
 #colorbox {
@@ -10,7 +10,7 @@
     top: 0;
     right: 0;
     display: block;
-    background: #b6132d url(/2013/images/close.png) no-repeat center center;
+    background: #FFF url(/2013/images/close.png) no-repeat center center;
     background-size: cover;
     text-indent: -99999em;
     overflow: hidden;
@@ -112,7 +112,7 @@
 }
 
 #cboxLoadingOverlay {
-    background: #000
+    background: #FFF;
 }
 
 #colorbox, #cboxOverlay, #cboxWrapper {
