--- a/2013/sass/_hero.scss
+++ b/2013/sass/_hero.scss
@@ -17,6 +17,8 @@
       }
     }
     hgroup {
+      line-height: 32px;
+      text-align: center;
       .title {
         // background: black;
         // @include replace-text-with-svg("logo-large");
@@ -50,6 +52,8 @@
       }
     }
     hgroup {
+      line-height: 32px;
+      text-align: center;
       .title {
         // background: black;
         // @include replace-text-with-svg("logo-large");
