工事中 文字調整

--- a/agenda/_day1.html.haml
+++ b/agenda/_day1.html.haml
@@ -6,8 +6,9 @@
   %p
     8/30 議程第一天<br>
     %small <a href="#day2">跳到第二天 day2 8/31 →</a>
-.agenda-table
-  %p 工事中
+%p.construction 工事中
+-# .agenda-table
+
 
   -# .time-block 08:30
 
