--- a/agenda/_day2.html.haml
+++ b/agenda/_day2.html.haml
@@ -4,8 +4,9 @@
 -#   .obj-scanner.obj{ :"data-type" => "Scanner"}
 .date-block
   %p 8/31 議程第二天
-.agenda-table
-  %p 工事中
+%p.construction 工事中
+-# .agenda-table
+
   -# .time-block 08:30
 
   -# %section.session.room-rest.long-time
