--- a/sponsor/index.html.haml
+++ b/sponsor/index.html.haml
@@ -7,7 +7,7 @@
 
   .sponsor-group
     .row
-      %p 工事中
+      %p.construction 工事中
   -#     %a.block.block43{ :href => "http://www.chroot.org/", :target => "_blank" }
   -#       .badge 連續主辦 <em>9</em> 年...
   -#       .block-image{ :style => "background-image: url(/2013/images/sponsor/chroot.png);" }
