--- a/sass/_debug.scss
+++ b/sass/_debug.scss
@@ -1,9 +1,18 @@
-$grid-background-column-color: rgba($blue,.25);
-$grid-background-baseline-color: rgba($blue,.2);
-.page {
+$grid-background-column-color: rgba($lightgray,.25);
+$grid-background-baseline-color: rgba($lightgray,.5);
+body {
   @include baseline-grid-background;
 }
-.page {
+.page-wrap {
+  @include container;
+  @include at-breakpoint($ipad) {
+    @include container;
+  }
+  @include at-breakpoint($desktop) {
+    @include container;
+  }
+}
+.page-wrap {
   @include susy-grid-background;
   @include at-breakpoint($ipad) {
     @include susy-grid-background;
