--- a/index.html.haml
+++ b/index.html.haml
@@ -1,9 +1,10 @@
 - content_for :hero do
-  .hero
-    %a{ :href => "/" }
-      %hgroup
-        %h1.title 2014 台灣資料科學愛好者年會
-        %h2.slogan Exploring the Potentials and Risks of Real-World Data Analytics
+  = render "/hero-page"
+  -# .hero
+  -#   %a{ :href => "/" }
+  -#     %hgroup
+  -#       %h1.title 2014 台灣資料科學愛好者年會
+  -#       %h2.slogan Exploring the Potentials and Risks of Real-World Data Analytics
 
 .row.description
   .section
@@ -34,7 +35,7 @@
     %p.address 台北市南港區研究院路二段128號
     %h2.title 今年主軸
     .content
-      %p 工事中
+      %p.construction 工事中
 
       -# .fb-like{ "data-href" => "http://hitcon.org/2013", "data-colorscheme" => "dark", "data-send" => "true", "data-show-faces" => "true", "data-width" => "450" }
 
@@ -47,7 +48,7 @@
 
 %hr
 
-.row.whats-hitcon
+.row
   .section
     -# .objgroup
     -#   / .obj-decoder.obj{ :"data-type" => "Decoder"}
@@ -67,4 +68,4 @@
     -#   .obj-decoder.obj{ :"data-type" => "Decoder"}
     %h2.title 關於 台灣資料科學愛好者年會
     .content.zh-tw
-      %p 工事中
+      %p.construction 工事中
