連結顏色調整

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -18,7 +18,7 @@ body {
 }
 
 a {
-  // @include link-colors($white, $green);
+  @include link-colors($blue, $lightblue);
   @include hover-link;
 }
 
