--- a/sass/all.scss
+++ b/sass/all.scss
@@ -5,12 +5,14 @@ $relative-font-sizing: false;
 $grid-background-baseline-height: $base-line-height;
 
 $red:          #b6132d;
-$blue:         #2f4768;
+$blue:         #1275e2;
+$lightblue:    #2e82e2;
 $dark-blue:    #091324;
 $green:        #208e7f;
 $yellow:       #d1cc80;
 $dark-yellow:  darken(#d1cc80, 30%);
 $white:        #d1dffe;
+$lightgray:    #d7d7d3;
 
 body {
   // background: black image-url("bg-grid.png") repeat-y center -1px;
