--- a/_layout.html.haml
+++ b/_layout.html.haml
@@ -13,22 +13,32 @@
     = render "/partials/site-css"
     = render "/vender/html5shim"
 
-    = render "/kmt.erb"
-
   %body
     .page-wrap
-      = yield :hero
       .page
         %nav.main-menu
           %h2.title Main Navigation
           %ul
             %li.menu-item= link_to( "Home", "/" )
-            %li.menu-item= link_to( "News", "/news/" )
-            %li.menu-item= link_to( "Agenda", "/agenda/" )
-            -# %li.menu-item= link_to( "Wargame", "/wargame/" )
-            %li.menu-item= link_to( "Location", "/location/" )
-            %li.menu-item= link_to( "Registration", "/registration/" )
-            %li.menu-item= link_to( "Sponsor", "/sponsor/" )
+            %li.menu-item= link_to( "最新消息", "/news/" )
+            %li.menu-item
+              %span 徵求貢獻
+              %ul
+                %li.menu-item= link_to( "徵求講者", "/seek/speaker.html" )
+                %li.menu-item= link_to( "徵求志工", "/seek/volunteer.html" )
+            %li.menu-item
+              %span 會議議程
+              %ul
+                %li.menu-item= link_to( "演講議程", "/agenda/" )
+                %li.menu-item= link_to( "資料分析上手課程", "/agenda/" )
+                %li.menu-item= link_to( "g0v 零時政府黑客松", "/agenda/" )
+            %li.menu-item
+              %span 活動參與
+              %ul
+                %li.menu-item= link_to( "線上報名", "/registration/signup.html" )
+                %li.menu-item= link_to( "交通資訊", "/registration/traffic.html" )
+                %li.menu-item= link_to( "會場資訊", "/registration/location.html" )
+            %li.menu-item= link_to( "工作委員", "/staff/" )
         .main-content
           .header
             %a.menu-button
@@ -36,7 +46,8 @@
               .line
               .line
             %h1.title
-              = link_to "DS Conference", "/"
+              = link_to "台灣資料科學愛好者年會", "/"
+          = yield :hero
           = yield
           = render "/footer"
       = render "/vender/jquery-cdn"
