--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -1,4 +1,5 @@
 .main-menu {
+  height: 100%;
   .title {
     padding: 0 $base-line-height / 2;
     font-size: 12px;
@@ -10,65 +11,76 @@
   }
   .menu-item {
     list-style: none;
+    line-height: $base-line-height * 2;
     // border-bottom: 1px solid $blue;
     a {
       display: block;
       padding: 0 $base-line-height / 2;
-      line-height: $base-line-height * 2 - 1px;
-      // @include transition(background-color .3s .3s);
+      line-height: $base-line-height * 2;
+      @include transition(background-color .3s .3s);
       @include unstyled-link;
-      // @include link-colors($white);
+      @include link-colors($blue);
+      &:hover {
+        @include link-colors($lightblue);
+      }
       &:active {
         // color: $yellow;
         // background: rgba($white,.1);
         // border: 1px solid $white;
         // border-width: 1px 0;
-        margin: -1px 0;
+        // margin: -1px 0;
         position: relative;
         z-index: 100;
       }
     }
+    ul a {
+      padding-left: 3em;
+    }
+    span {
+      padding: 0 $base-line-height / 2;
+      color: $gray;
+    }
   }
   @include at-breakpoint($desktop) {
-    @include leader(1);
-    @include trailer(1);
+    @include leader(2);
+    // @include trailer(1);
     .title {
       display: none;
     }
     ul {
       @include pie-clearfix;
     }
-    .menu-item {
-      // @include isolate-grid(2);
-      @include span-columns(2, 10);
-      @include nth-omega;
-      line-height: $base-line-height - 1px;
-      text-align: center;
-      position: relative;
-      top: - $base-line-height / 2;
-      // @include transition(border-color .3s .3s);
-      &:hover {
-        border-color: $white;
-      }
-      a {
-        position: relative;
-        top: $base-line-height / 2;
-        display: inline;
-        font-size: 15px;
-        line-height: $base-line-height - 1px;
-        // background: black;
-        // @include link-colors($red);
-        // @include transition( background-color .3s );
-        &:hover {
-          // background: black;
-          // color: $yellow;
-          // text-shadow: 0 0 5px rgba($yellow, 1);
-          border: none;
-        }
-      }
-      &:first-child {
-        display: none;
-      }
-    }
+    // .menu-item {
+    //   // @include isolate-grid(2);
+    //   @include span-columns(2, 10);
+    //   @include nth-omega;
+    //   line-height: $base-line-height - 1px;
+    //   text-align: center;
+    //   position: relative;
+    //   top: - $base-line-height / 2;
+    //   @include transition(border-color .3s .3s);
+    //   &:hover {
+    //     border-color: $white;
+    //   }
+    //   a {
+    //     position: relative;
+    //     top: $base-line-height / 2;
+    //     display: inline;
+    //     font-size: 15px;
+    //     line-height: $base-line-height - 1px;
+    //     // background: black;
+    //     // @include link-colors($red);
+    //     // @include transition( background-color .3s );
+    //     &:hover {
+    //       // background: black;
+    //       // color: $yellow;
+    //       // text-shadow: 0 0 5px rgba($yellow, 1);
+    //       border: none;
+    //     }
+    //   }
+    //   &:first-child {
+    //     display: none;
+    //   }
+    // }
   }
 }
