--- a/sass/all.scss
+++ b/sass/all.scss
@@ -5,13 +5,14 @@ $relative-font-sizing: false;
 $grid-background-baseline-height: $base-line-height;
 
 $red:          #b6132d;
-$blue:         #1275e2;
-$lightblue:    #2e82e2;
+$blue:         #005ce2;
+$lightblue:    #3193e2;
 $dark-blue:    #091324;
 $green:        #208e7f;
 $yellow:       #d1cc80;
 $dark-yellow:  darken(#d1cc80, 30%);
 $white:        #d1dffe;
+$gray:         #aaaa99;
 $lightgray:    #d7d7d3;
 
 body {
