--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -385,7 +385,12 @@ html {
   line-height: 24px;
 }
 
+html, body {
+  height: 100%;
+}
+
 .page {
+  min-height: 100%;
   overflow: hidden;
 }
 
@@ -458,6 +463,7 @@ body {
   -webkit-background-clip: content-box;
   -moz-background-clip: content-box;
   background-clip: content-box;
+  min-height: 100%;
 }
 @media (min-width: 720px) {
   .page-wrap {
@@ -493,6 +499,7 @@ body {
     -webkit-background-clip: content-box;
     -moz-background-clip: content-box;
     background-clip: content-box;
+    margin: 0;
   }
 }
 
@@ -524,11 +531,16 @@ body {
   margin-left: -100%;
 }
 .show-menu .main-menu {
+  overflow-y: scroll;
   margin-left: 0;
 }
 
 .main-content {
   min-height: 600px;
+  -webkit-transition: margin 0.3s;
+  -moz-transition: margin 0.3s;
+  -o-transition: margin 0.3s;
+  transition: margin 0.3s;
   width: 100%;
   float: right;
   margin-right: 0;
@@ -576,7 +588,7 @@ body {
     padding-right: 1em;
     margin-left: auto;
     margin-right: auto;
-    max-width: 78em;
+    max-width: 96em;
   }
   .page:after {
     content: "";
@@ -592,6 +604,9 @@ body {
     float: none;
     width: auto;
     margin-right: auto;
+    width: 24.09639%;
+    float: left;
+    margin-right: 1.20482%;
     margin-left: 0;
   }
 
@@ -604,6 +619,9 @@ body {
     float: none;
     width: auto;
     margin-right: auto;
+    width: 74.6988%;
+    float: right;
+    margin-right: 0;
     margin-right: 0;
   }
   .show-menu .main-content {
@@ -617,7 +635,7 @@ body {
 }
 
 .topic {
-  margin: -3px auto 21px;
+  margin: 0 auto 24px;
   overflow: hidden;
   width: 80%;
 }
@@ -628,7 +646,7 @@ body {
   text-align: center;
 }
 .topic hr {
-  margin-bottom: 47px;
+  margin-bottom: 48px;
 }
 @media (min-width: 720px) {
   .topic {
@@ -658,24 +676,19 @@ body {
   }
 }
 .topic .date {
-  text-align: left;
+  text-align: center;
   margin: 0;
   padding: 0;
   font-size: 22px;
-  line-height: 36px;
+  line-height: 48px;
 }
 .topic .date.en {
   font-size: 22px;
   line-height: 36px;
 }
-@media (min-width: 720px) {
-  .topic .date {
-    text-align: center;
-  }
-}
 .topic .stage,
 .topic .address {
-  text-align: left;
+  text-align: center;
   font-size: 15px;
   line-height: 24px;
   margin: 0;
@@ -685,12 +698,6 @@ body {
 .topic .address.en {
   font-size: 13px;
   line-height: 24px;
-}
-@media (min-width: 720px) {
-  .topic .stage,
-  .topic .address {
-    text-align: center;
-  }
 }
 .topic .address {
   margin-bottom: 24px;
@@ -873,11 +880,11 @@ h1, h2, h3, h4, h5, h6, p, ul, ol {
 }
 
 a {
-  color: #1275e2;
+  color: #005ce2;
   text-decoration: none;
 }
 a:hover {
-  color: #2e82e2;
+  color: #3193e2;
 }
 a:hover {
   text-decoration: underline;
@@ -897,7 +904,7 @@ hr {
   border-bottom-style: solid;
   border-bottom-width: 1px;
   padding-bottom: 23px;
-  border-color: #1275e2;
+  border-color: #005ce2;
   margin-bottom: 24px;
 }
 
@@ -936,6 +943,7 @@ hr {
 .section ul,
 .section ol {
   margin-bottom: 24px;
+  margin-left: 18px;
 }
 
 .row {
@@ -2153,7 +2161,8 @@ p.construction {
   text-align: center;
   position: relative;
   display: inline-block;
-  line-height: 44px;
+  line-height: 46px;
+  border: 1px solid #005ce2;
   padding: 0 12px;
   margin: 0 auto;
 }
@@ -2172,6 +2181,9 @@ p.construction {
   text-decoration: none;
 }
 
+.main-menu {
+  height: 100%;
+}
 .main-menu .title {
   padding: 0 12px;
   font-size: 12px;
@@ -2181,27 +2193,42 @@ p.construction {
 }
 .main-menu .menu-item {
   list-style: none;
+  line-height: 48px;
 }
 .main-menu .menu-item a {
   display: block;
   padding: 0 12px;
-  line-height: 47px;
+  line-height: 48px;
+  -webkit-transition: background-color 0.3s;
+  -webkit-transition-delay: 0.3s;
+  -moz-transition: background-color 0.3s 0.3s;
+  -o-transition: background-color 0.3s 0.3s;
+  transition: background-color 0.3s 0.3s;
   color: inherit;
   text-decoration: inherit;
   cursor: inherit;
+  color: #005ce2;
 }
 .main-menu .menu-item a:active, .main-menu .menu-item a:focus {
   outline: none;
 }
+.main-menu .menu-item a:hover {
+  color: #3193e2;
+}
 .main-menu .menu-item a:active {
-  margin: -1px 0;
   position: relative;
   z-index: 100;
 }
+.main-menu .menu-item ul a {
+  padding-left: 3em;
+}
+.main-menu .menu-item span {
+  padding: 0 12px;
+  color: #aaaa99;
+}
 @media (min-width: 960px) {
   .main-menu {
-    margin-top: 24px;
-    margin-bottom: 24px;
+    margin-top: 48px;
   }
   .main-menu .title {
     display: none;
@@ -2211,35 +2238,6 @@ p.construction {
     display: table;
     clear: both;
   }
-  .main-menu .menu-item {
-    width: 18.84058%;
-    float: left;
-    margin-right: 1.44928%;
-    line-height: 23px;
-    text-align: center;
-    position: relative;
-    top: -12px;
-  }
-  .main-menu .menu-item:last-child {
-    float: right;
-    margin-right: 0;
-  }
-  .main-menu .menu-item:hover {
-    border-color: #d1dffe;
-  }
-  .main-menu .menu-item a {
-    position: relative;
-    top: 12px;
-    display: inline;
-    font-size: 15px;
-    line-height: 23px;
-  }
-  .main-menu .menu-item a:hover {
-    border: none;
-  }
-  .main-menu .menu-item:first-child {
-    display: none;
-  }
 }
 
 .header {
@@ -2247,7 +2245,7 @@ p.construction {
   margin-bottom: 48px;
 }
 .header .title {
-  font-size: 24px;
+  font-size: 20px;
   line-height: 48px;
   text-align: center;
   height: 47px;
@@ -2361,7 +2359,7 @@ p.construction {
 @media (min-width: 960px) {
   .hero-page {
     display: block;
-    padding-top: 72px;
+    padding-top: 48px;
     padding-bottom: 48px;
   }
   .hero-page hgroup {
