--- a/news/index.html.haml
+++ b/news/index.html.haml
@@ -3,7 +3,7 @@
 
 .row
   .section
-    %h2.title 新聞
+    %h2.title 最新消息
     .content.zh-tw
       %p.construction
         = render "/data/news.md"
