連結網址更新

--- a/_layout.html.haml
+++ b/_layout.html.haml
@@ -29,9 +29,9 @@
             %li.menu-item
               %span 會議議程
               %ul
-                %li.menu-item= link_to( "演講議程", "/agenda/" )
-                %li.menu-item= link_to( "資料分析上手課程", "/agenda/" )
-                %li.menu-item= link_to( "g0v 零時政府黑客松", "/agenda/" )
+                %li.menu-item= link_to( "演講議程", "/agenda/speech/" )
+                %li.menu-item= link_to( "資料分析上手課程", "/agenda/tutorial/" )
+                %li.menu-item= link_to( "g0v 零時政府黑客松", "/agenda/g0v/" )
             %li.menu-item
               %span 活動參與
               %ul
