--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -2563,7 +2563,6 @@ p.construction {
     padding-left: 1.5em;
   }
   .agenda-table .time-block {
-    margin-left: -1.5em;
     text-indent: -4em;
     letter-spacing: 1px;
     font-size: 12px;
@@ -2582,11 +2581,7 @@ p.construction {
   }
 }
 @media (min-width: 960px) {
-  .agenda-table {
-    padding-left: 6em;
-  }
   .agenda-table .time-block {
-    margin-left: -2em;
     text-indent: -4.4em;
   }
 }
@@ -2596,31 +2591,65 @@ p.construction {
   padding: 0;
   border: 0;
   font-size: 24px;
-  line-height: 24px;
+  line-height: 48px;
   margin-bottom: 24px;
   text-align: center;
 }
 .date-block p small {
-  font-size: 12px;
+  display: block;
+  font-size: 14px;
+  line-height: 24px;
 }
 
 .time-block {
   font-size: 12px;
   line-height: 24px;
+  background: #005ce2;
   padding: 0 .5em;
   letter-spacing: 2px;
   font-weight: bold;
   color: white;
 }
+@media (min-width: 720px) {
+  .time-block {
+    margin-top: -1px;
+    color: black;
+  }
+}
 
 .session {
   -webkit-font-smoothing: antialiased;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding-top: 0px;
+  padding-bottom: 24px;
   font-size: 12px;
-  line-height: 16px;
+  line-height: 24px;
+}
+.session .title {
+  text-align: left;
+  margin: 24px 0;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: bold;
+}
+@media (min-width: 720px) {
+  .session .title {
+    margin: 23px 0 24px 0;
+  }
 }
 @media (min-width: 960px) {
+  .session {
+    text-align: center;
+    float: none;
+    width: auto;
+    margin-right: auto;
+  }
+  .session .title {
+    background: transparent;
+    text-align: center;
+  }
+  .session time {
+    margin: 0;
+  }
   .session[class*="room-r"] {
     width: 32.53012%;
     float: left;
@@ -2631,35 +2660,20 @@ p.construction {
     float: right;
     margin-right: 0;
   }
-  .session.room-all {
-    padding-top: 0px;
-    text-align: center;
-    float: none;
-    width: auto;
-    margin-right: auto;
-  }
-  .session.room-all .title {
-    background: transparent;
-    text-align: center;
-  }
-  .session.room-all time {
-    margin: 0;
-  }
 }
-.session .title {
-  text-align: left;
-  margin-top: 6px;
-  font-size: 16px;
-  line-height: 18px;
-  font-weight: bold;
-  margin-bottom: 6px;
+.session .info {
+  margin-top: -24px;
 }
 .session .speaker {
   display: inline-block;
+  line-height: 24px;
+  margin-top: -24px;
   margin-right: 1em;
 }
 .session time {
   display: inline-block;
+  line-height: 24px;
+  margin-top: -24px;
   margin-right: 1em;
 }
 .session:before {
@@ -2671,30 +2685,19 @@ p.construction {
   letter-spacing: 1px;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
 }
-.session.room-r0:before {
-  content: "R0";
-}
-.session.room-r1:before {
-  content: "R1";
-}
-.session.room-r2:before {
-  content: "R2";
-}
 .session.room-rest {
   float: none;
   text-align: center;
   float: none;
   width: auto;
   margin-right: auto;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-bottom: 24px;
 }
 .session.room-rest .title {
   text-align: center;
 }
 @media (min-width: 960px) {
   .session.room-rest .title {
-    display: inline-block;
     margin-right: .5em;
   }
 }
@@ -2707,7 +2710,7 @@ p.construction {
   }
 }
 .session.long-time {
-  padding-top: 48px;
+  padding-top: 24px;
   padding-bottom: 48px;
 }
 
