--- a/sass/_agenda.scss
+++ b/sass/_agenda.scss
@@ -132,7 +132,7 @@
     font-size: 12px;
     padding-left: 1.5em;
     .time-block {
-      margin-left: -1.5em;
+      // margin-left: -1.5em;
       text-indent: -4em;
       letter-spacing: 1px;
       font-size: 12px;
@@ -153,9 +153,9 @@
     }
   }
   @include at-breakpoint($desktop) {
-    padding-left: 6em;
+    // padding-left: 6em;
     .time-block {
-      margin-left: -2em;
+      // margin-left: -2em;
       text-indent: -4.4em;
     }
   }
@@ -163,33 +163,57 @@
 
 .date-block p {
   @include reset-box-model;
-  @include adjust-font-size-to(24px,1);
+  @include adjust-font-size-to(24px,2);
   // @include trailing-border(1px);
   @include trailer(1);
   // border-color: $red;
   text-align: center;
   small {
-    font-size: 12px;
+    display: block;
+    @include adjust-font-size-to(14px);
   }
 }
 .time-block {
   @include adjust-font-size-to(12px);
-  // background: $blue;
+  background: $blue;
   padding: 0 .5em;
   letter-spacing: 2px;
   font-weight: bold;
   color: white;
+  @include at-breakpoint($ipad) {
+    margin-top: -1px;
+    color: black;
+  }
 }
 .session {
   -webkit-font-smoothing: antialiased;
-  @include padding-leader(2/3);
-  @include padding-trailer(2/3);
-  @include adjust-font-size-to(12px, 2/3);
+  @include padding-leader(0);
+  @include padding-trailer(1);
+  @include adjust-font-size-to(12px, 1);
   &+& {
     // @include leading-border(1px, 2/3);
     // border-color: $blue;
   }
+  .title {
+    text-align: left;
+    margin: 24px 0;
+    @include adjust-font-size-to(16px, 1);
+    font-weight: bold;
+    // background: $dark-blue;
+    @include at-breakpoint($ipad) {
+      margin: 23px 0 24px 0;
+    }
+  }
   @include at-breakpoint($desktop) {
+    text-align: center;
+    @include reset-columns;
+    .title {
+      background: transparent;
+      text-align: center;
+    }
+    time {
+      margin: 0;
+    }
     &+& {
       // border-top: 0;
     }
@@ -198,32 +222,20 @@
       @include nth-omega();
       @include padding-leader(0);
     }
-    &.room-all {
-      @include padding-leader(0);
-      text-align: center;
-      @include reset-columns;
-      .title {
-        background: transparent; text-align: center;
-      }
-      time {
-        margin: 0;
-      }
-    }
   }
-  .title {
-    text-align: left;
-    @include leader(1/4);
-    @include adjust-font-size-to(16px, 3/4);
-    font-weight: bold;
-    // background: $dark-blue;
-    @include trailer(1/4);
+  .info {
+    margin-top: -24px;
   }
   .speaker {
     display: inline-block;
+    line-height: 24px;
+    margin-top: -24px;
     margin-right: 1em;
   }
   time {
     display: inline-block;
+    line-height: 24px;
+    margin-top: -24px;
     margin-right: 1em;
   }
   &:before {
@@ -235,31 +247,30 @@
     letter-spacing: 1px;
     text-shadow: 0 1px 0 rgba(black,.3);
   }
-  &.room-r0:before {
-    content: "R0";
-    // background: $red;
-  }
-  &.room-r1:before {
-    content: "R1";
-    // background: $dark-yellow;
-  }
-  &.room-r2:before {
-    content: "R2";
-    // background: $green;
-  }
+  // &.room-r0:before {
+  //   content: "R0";
+  //   background: $red;
+  // }
+  // &.room-r1:before {
+  //   content: "R1";
+  //   background: $dark-yellow;
+  // }
+  // &.room-r2:before {
+  //   content: "R2";
+  //   background: $green;
+  // }
   &.room-rest {
     float: none;
     text-align: center;
     @include reset-columns;
-    @include padding-leader(1/3);
-    @include padding-trailer(1/3);
+    @include padding-trailer(1);
     // background: darken($blue, 13%);
     .title {
       // text-shadow: 0 0 10px $white;
       // background: transparent;
       text-align: center;
       @include at-breakpoint($desktop) {
-        display: inline-block;
+        // display: inline-block;
         margin-right: .5em;
       }
     }
@@ -271,7 +282,7 @@
     }
   }
   &.long-time {
-    @include padding-leader(2);
+    @include padding-leader(1);
     @include padding-trailer(2);
   }
 }
